# neo4j_dev_stack

./: .gitignore
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: auth.py  config.py  metrics.py  neo4j.py  postgres.py
backend/app/migrations/: neo4j_001_constraints.cypher  neo4j_002_seed.cypher  neo4j_003_neodash.cypher  neo4j_004_project_tenancy.cypher
backend/app/models/: api.py  events.py
backend/app/repositories/: event_repository.py  graph_repository.py
backend/app/services/: projection_worker.py  simulation_service.py
backend/scripts/: apply_neo4j_migrations.py  run_projection_worker.py
backend/tests/: conftest.py
backend/tests/e2e/: test_api_e2e.py
backend/tests/unit/: test_config.py  test_models.py  test_projection_worker.py
docker/: .env.aura.example  .env.example  .env.local-install.example  docker-compose.yml
docs/: 01_architecture.md  02_project_structure.md  03_docker_ports.md  04_api_reference.md  05_domain_model.md  06_database_schema.md  07_testing.md  08_monitoring.md  09_dev_runbook.md  10_session_log.md  11_multi_project_playbook.md  12_frontend_upgrade_2026-02-27.md  13_stack_upgrade_next_steps_2026-02-27.md  14_cross_repo_local_validation_2026-03-03.md  15_aura_lightweight_profile_validation_2026-03-03.md  16_naming_and_scope_clarification_2026-03-03.md  17_hise_integration_contract_2026-03-03.md  18_hise_sync_report_2026-03-06.md  README.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  (+1 more)
(+47 files in other folders)
