[tool.poetry]
name = "neo4j-dev-backend"
version = "0.1.0"
description = "Backend environment for Neo4j dev stack"
authors = ["Author <author@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.6"
uvicorn = {extras = ["standard"], version = "0.34.0"}
neo4j = "5.28.1"
asyncpg = "0.30.0"
pydantic = "2.10.4"
pydantic-settings = "2.7.0"
python-dotenv = "1.0.1"
prometheus-client = "0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
pytest-asyncio = "0.24.0"
pytest-cov = "6.0.0"
httpx = "0.28.1"
anyio = "4.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing"
